# automation

./: conftest.py  pyproject.toml  requirements.txt  settings.py
features/: app_open.feature
page/: common_page.py  home_page.py
steps/: __init__.py  app_open.py  test_app_open.py
test/: test_app_open.py
yml/: config.yml
yml/test/: test_app_open.py
